# kiddo-plays

./: README.md  kiddo-plays.code-workspace  nativescript-playlist.md
ai/agent-small-team/: .env.example  (+7 more)
ai/e2b-sandbox/: .env.example  README.md  llm-code.py  llm-function-call.py  main.py  pyproject.toml  vnc-with-sandbox.md
ai/lite-oss/: .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
ai/lite-oss/app/: config.py  database.py  main.py  schemas.py
ai/lite-oss/app/routers/: config.py  file.py  health.py
ai/lite-oss/docs/: 文件上传下载管理系统 PRD（Docker Compose 架构）.md
ai/lite-oss/kong/: kong.dev.yml  kong.yml
ai/lite-oss/scripts/: minio-init.sh
ai/lite-oss/static/: index.html
ai/lite-oss/static/css/: style.css
ai/lite-oss/static/js/: app.js
ai/lite-rag/: .gitignore  README.md  main.py  pyproject.toml
ai/lite-rag/sample/: agent.txt  embedding.txt  rag.txt
ai/repo-report/: .gitignore  README.md  pyproject.toml
ai/repo-report/config/: config.yaml.example
ai/repo-report/docs/: AI每日代码Commit分析推送系统PRD.md
ai/repo-report/prompts/: analyze_repo.txt
ai/repo-report/src/repo_report/: __init__.py  __main__.py  cli.py  lock.py  logging_setup.py  models.py  orchestrator.py  worker.py
ai/repo-report/src/repo_report/ai/: __init__.py  base.py  claude_code.py  factory.py  prompt.py
ai/repo-report/src/repo_report/cleanup/: __init__.py  stale.py
ai/repo-report/src/repo_report/config/: __init__.py  loader.py
ai/repo-report/src/repo_report/cursor/: __init__.py  store.py
ai/repo-report/src/repo_report/git/: __init__.py  operations.py
ai/repo-report/src/repo_report/push/: __init__.py  base.py  dingtalk.py  factory.py  feishu.py  retry.py  webhook.py  wecom.py
ai/repo-report/src/repo_report/report/: __init__.py  builder.py
ai/repo-report/tests/: test_ai_retry.py  test_config.py  test_cursor.py  test_prompt.py  test_prompt_path.py  test_push_factory.py  test_report.py
angular-playlist/: README.md  angular-cli.json
assembly/: README.md
babel-guide/: .npmrc  Makefile  README.md  jest.config.js  package.json
bundler/: README.md
dart-language/: README.md
data_structure_algorithm_recap/: package.json  tsconfig.json
docker/: README.md  automation.md  cheatsheet.md  container-monitoring.md  docker-compose.md  docker.md  health-checks.md  networking.md  orchestration.md  persistent-storage.md  production-practices.md  remote-engine.md  security.md
dotfiles/: .vuerc  README.md  pre_bootstrap.sh
engineering/: README.md
ffmpeg/: README.md
fullstack-starter/: .dockerignore  .gitignore  Makefile  Procfile  README.md  dev_all.sh  ecosystem.config.js  proxychains.example.conf  setup_all.sh  starter.code-workspace
golanger/: .gitignore  README.md
grafana/: grafana.code-workspace
graphql-language/: README.md
jQuery/: README.md  package-lock.json  package.json
kubernetes/: README.md  api-server.md  architecture.md  authentication-authorization.md  cheatsheet.md  configmap-secret.md  constructs.md  kong_vs_native_ingress.md  monitoring-n-logging.md  networking.md  pv-pvc.md  scaling.md  scheduler.md  workloads.md
lerna-verdaccio/: .gitignore  Makefile  README.md  docker-compose.yaml  lerna.json
module-federation-mono/: DESIGN.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
nativescript/: README.md
nest-playlist/: README.md
node-playlist/: README.md  cli-template.js  cli-template.mjs  otp-middleware.md
nxdev/: README.md
project_tom/: .env  .gitignore  Makefile  Procfile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.code-workspace
python-language/: README.md  gil-in-python.md  main.py
python-language/image_diff/: CLAUDE.md  README.md  exceptions.py  image_utils.py  main.py  pyproject.toml
python-language/image_diff/tests/: test_comparator.py
python-language/mac-screen-ocr/: DESIGN.md  README.md  main.py  pyproject.toml  ss.py
python-language/mac_reminder/: DEVELOP.md  README.md  api.py  config.yaml  database.py  main.py  notification.py  pyproject.toml  reminder.db  scheduler.py  setup.cfg  setup.old.py  setup.py.2
qt/alarm/: .gitignore  AlarmDelegate.qml  AlarmDialog.qml  AlarmModel.qml  CMakeLists.txt  Main.qml  README.md  TumblerDelegate.qml  main.cpp  qtquickcontrols2.conf
radix-n-shadcn/: package-lock.json  package.json
react-data/: README.md  package.json
react-renderer/: README.md
react-stores/: .gitignore  README.md  jsconfig.json  package-lock.json  package.json
rust-language/: .gitignore
rust-language/Crunch/: Cargo.toml  README.md
rust-language/Crunch/src/: cli.rs  main.rs
rust-language/Crunch/src/lib/: logger.rs  mod.rs  optimizer.rs  png_validator.rs
rust-language/mandelbrot/: Cargo.toml  README.md
rust-language/mandelbrot/src/: lib.rs  math.rs  parse.rs  pixel.rs  render.rs
rust-language/pipeviewer/: .gitignore  Cargo.toml  README.md
rust-language/pipeviewer/git-hooks/: pre-commit
rust-language/pipeviewer/src/: args.rs  read.rs  write.rs
rust-language/pipeviewer/src/stats/: mod.rs  timer.rs
rust-language/rust-2048-demo/: Cargo.toml  README.md
rust-language/rust-2048-demo/src/: app.rs  board.rs  main.rs  number_renderer.rs  settings.rs  tile.rs
rust-language/rustodo/: Cargo.toml  README.md
rust-language/rustodo/src/: cli.rs  main.rs  task.rs
rust-language/rusty_sword/: Cargo.toml  README.md
rust-language/rusty_sword/src/: coord.rs  floor.rs  main.rs  monster.rs  player.rs  render.rs  world.rs
scheduler/: README.md  scheduler.ts
shells/: README.md  cheat-list.sh  parsing-arguments.sh  secure-shell-template.sh  secure-shell.sh
task-runners/: .gitignore  Gruntfile.example.js  Gruntfile.js  README.md  gulpfile.js  package-lock.json  package.json
tdd-and-bdd/: README.md
toy-promise/: README.md  package.json  rollup.config.js
tree-sitter-writeup/: README.md
try-on-dev_container/: README.md
type-gymnastics/: README.md
vuejs/: README.md
wasm/: .env  README.md
web-video-player/: README.md  package-lock.json  package.json
webpack/: wander-in-webpack.md
wxma/: README.md
(+6106 files in other folders)
