[project]
name = "repo-report"
version = "0.1.0"
description = "AI daily commit analysis and team report push system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "filelock>=3.13",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
repo-report = "repo_report.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_report"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
