[project]
name = "mac-screen-ocr"
version = "0.1.0"
description = "Mac Screen OCR with RapidOCR and ONNX Runtime"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rapidocr>=3.4.0",
    "onnxruntime>=1.24.1",
    "mss>=10.1.0",
    "numpy>=2.4.3",
    "pyperclip>=1.11.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
