[project]
name = "mac-reminder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{name = "AkatQuas"}]
requires-python = ">=3.12"
dependencies = [
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0",
  "apscheduler>=3.10.4",
  "fastapi>=0.104.1",
  "uvicorn>=0.24.0",
  "pyobjc>=9.0", # 适配MacOS 13+的系统通知
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[dependency-groups]
dev = [
    "py2app>=0.28.8",
    "setuptools>=82.0.1",
]
