[metadata]
name = MacReminder
version = 1.0.0
description = Mac Reminder Application
author = AkatQuas

[py2app]
app = main.py
argv_emulation = True
plist =
    CFBundleName = MacReminder
    CFBundleDisplayName = MacReminder
    CFBundleVersion = 1.0.0
    LSUIElement = True
packages = apscheduler, fastapi, uvicorn, pydantic, pyobjc
