[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "bin/main.rs"

[[bin]]
name = "single"
path = "bin/single.rs"

[dependencies]
crossbeam = "0.8.2"
image = "0.24.6"
num = "0.4.0"
